[package]
name = "flora"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_winit_vulkano = "0.27.0"
image = "0.25.5"
vulkano = "0.34"
vulkano-shaders = "0.34"
egui = "0.24"
egui_demo_lib = "0.24"
vulkano-util = "0.34"
winit = { version = "0.28", default-features = false }

[profile.dev]
opt-level = 1
